@startuml
title Architecture Overview
hide circles

class Ui {
  + readCommand(): String
  + showHelp()
  + showMessage(message: String)
}

class CG2StocksTracker {
  - portfolioBook: PortfolioBook
  - watchlist: Watchlist
  + run()
}

class Parser {
  + parse(input: String): ParsedCommand
}

class ParsedCommand {
  + type(): CommandType
  + ticker(): String
  + totalFees(): double
}

class PortfolioBook {
  - portfolios: Map<String, Portfolio>
  - activePortfolioName: String
  + createPortfolio(name: String)
  + getActivePortfolio(): Portfolio
  + usePortfolio(name: String)
}

class Portfolio {
  - name: String
  - totalRealizedPnl: double
  + addHolding(...)
  + removeHolding(...)
  + setPriceForTicker(ticker: String, price: double): int
}

class Holding {
  - ticker: String
  - quantity: double
  - averageBuyPrice: double
  + addQuantity(...)
  + removeQuantity(...)
  + getUnrealizedPnl(): double
}

class Watchlist {
  - items: Map<String, WatchlistItem>
  + addItem(...)
  + removeItem(...)
  + buyItem(...)
}

class WatchlistItem {
  + ticker(): String
  + targetPrice(): Double
  + hasPrice(): boolean
}

class Storage {
  - filePath: Path
  - watchlistFilePath: Path
  + load(): PortfolioBook
  + save(portfolioBook: PortfolioBook)
  + loadPriceUpdates(csvPath: Path, portfolio: Portfolio)
}

CG2StocksTracker ..> Ui
CG2StocksTracker ..> Parser
Parser ..> ParsedCommand
CG2StocksTracker --> PortfolioBook
PortfolioBook *-- Portfolio
Portfolio *-- Holding
CG2StocksTracker --> Watchlist
Watchlist *-- WatchlistItem
CG2StocksTracker ..> Storage
@enduml
